add GeneralPosix panama test